force-app/main/default/objects/Advance_Payment_Rebate__c/Advance_Payment_Rebate__c.object-meta.xml
<CustomObject>
    <label>Advance Payment Rebate</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Advance Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advance Payment Rebates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>