force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Advance_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Advance_Amount_Paid__c</fullName>
    <formula>MIN(Total_of_Receipts__c, Booking__r.Total_On_Account_Money_With_Registration__c - Booking__r.Milestone_Due_Till_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Advance Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>