force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Approved by Collection Manager</fullName>
            </value>
            <value>
                <fullName>Approved by HOD</fullName>
            </value>
            <value>
                <fullName>Approved by Accounts</fullName>
            </value>
            <value>
                <fullName>Approved by Audit</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Accounts by Audit</fullName>
            </value>
            <value>
                <fullName>Resubmitted to Collections</fullName>
            </value>
            <value>
                <fullName>Submitted to Accounts</fullName>
                <isActive>false</isActive>
                <label>Submitted to Accounts</label>
            </value>
            <value>
                <fullName>Submitted to Audit</fullName>
                <isActive>false</isActive>
                <label>Submitted to Audit</label>
            </value>
            <value>
                <fullName>Submitted to HOD</fullName>
                <isActive>false</isActive>
                <label>Submitted to HOD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>