force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Approved_Time__c.field-meta.xml
<CustomField>
    <fullName>Approved_Time__c</fullName>
    <label>Approved Time</label>
    <type>DateTime</type>
</CustomField>