force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Advance Payment Rebates</relationshipLabel>
    <relationshipName>Advance_Payment_Rebates</relationshipName>
    <type>Lookup</type>
</CustomField>