force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Booking_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Name__c</fullName>
    <formula>Booking__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Name</label>
    <type>Text</type>
</CustomField>