force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Calculation_Sheet_File_Id__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Sheet_File_Id__c</fullName>
    <label>Calculation Sheet File Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>