force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Eligible_Rebate__c.field-meta.xml
<CustomField>
    <fullName>Eligible_Rebate__c</fullName>
    <label>Eligible Rebate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>