force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Paid_amount_till_date__c.field-meta.xml
<CustomField>
    <fullName>Paid_amount_till_date__c</fullName>
    <formula>Booking__r.Total_On_Account_Money_With_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid amount till date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>