force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Paid_As_of_Today__c.field-meta.xml
<CustomField>
    <fullName>Paid_As_of_Today__c</fullName>
    <formula>Booking__r.Paid_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid % As of Today</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>