force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Primary_Applicant_name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Applicant_name__c</fullName>
    <formula>Booking__r.Primary_Applicant_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Applicant name</label>
    <type>Text</type>
</CustomField>