force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Rejected_Status__c.field-meta.xml
<CustomField>
    <fullName>Rejected_Status__c</fullName>
    <label>Rejected Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>rejected by Collections</fullName>
            </value>
            <value>
                <fullName>Rejected by Accounts</fullName>
            </value>
            <value>
                <fullName>Rejected by Audit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>