force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Sale_Value__c</fullName>
    <formula>Booking__r.Agreement_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>