force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Status_Lapse__c.field-meta.xml
<CustomField>
    <fullName>Status_Lapse__c</fullName>
    <label>Status Lapse</label>
    <type>TextArea</type>
</CustomField>