force-app/main/default/objects/Advance_Payment_Rebate__c/fields/Total_Amount_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_On_Account__c</fullName>
    <formula>Booking__r.Total_On_Account_Money_With_Registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount On Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>