force-app/main/default/objects/Advance_Payment_Rebate__c/validationRules/Booking_Source.validationRule-meta.xml
<ValidationRule>
    <fullName>Booking_Source</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Booking__r.Booking_Source__c , &apos;Employee Reference&apos;)</errorConditionFormula>
    <errorMessage>APR cannot be raise because of booking source is Employee Reference</errorMessage>
</ValidationRule>