force-app/main/default/objects/Advance_Payment_Rebate__c/listViews/Pending_for_Audit_approval.listView-meta.xml
<ListView>
    <fullName>Pending_for_Audit_approval</fullName>
    <columns>NAME</columns>
    <columns>Booking_Name__c</columns>
    <columns>Unit__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Paid_amount_till_date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approval_Status__c</field>
        <operation>equals</operation>
        <value>Approved by Accounts</value>
    </filters>
    <label>Pending for Audit approval</label>
    <sharedTo>
        <role>Audit</role>
    </sharedTo>
</ListView>